completed adjustments to gallery and adding some functionality to expand image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="view_profile">View Profile</string>
     <string name="scan_for_points">Scan for Points</string>
     <string name="player_qr_alert_description_text">This is a player code. You can scan it for points, see the user\'s profile, or log in to this account.</string>
+    <string name="description">Description:</string>
+
 </resources>
